src/test/deca/context/invalid/langage_sans_objet/troisieme_passe/regle_3_17_2.deca
{
    void a;
}
// raison : type = void
// message : Variable type cannot be void